--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.q2web</groupId>
-	<artifactId>jocl-gis</artifactId>
+	<artifactId>jocl-math</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>jocl-gis</name>
+	<name>jocl-math</name>
 	<inceptionYear>2012</inceptionYear>
 
 	<licenses>
@@ -30,12 +30,12 @@
 
 	<issueManagement>
 		<system>github</system>
-		<url>https://github.com/oschrenk/jocl-gis/issues</url>
+		<url>https://github.com/oschrenk/jocl-math/issues</url>
 	</issueManagement>
 	<scm>
-		<connection>scm:git:http://github.com/oschrenk/jocl-gis.git</connection>
-		<developerConnection>scm:git:git@github.com:oschrenk/jocl-gis.git</developerConnection>
-		<url>http://github.com/oschrenk/jocl-gis</url>
+		<connection>scm:git:http://github.com/oschrenk/jocl-math.git</connection>
+		<developerConnection>scm:git:git@github.com:oschrenk/jocl-math.git</developerConnection>
+		<url>http://github.com/oschrenk/jocl-math</url>
 	</scm>
 
 	<properties>
@@ -65,7 +65,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.6</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
@@ -74,7 +74,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12</version>
+				<version>2.12.4</version>
 				<configuration>
 					<excludes>
 						<exclude>**/*IntegrationTest.java</exclude>
@@ -85,7 +85,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.12</version>
+				<version>2.12.4</version>
 				<executions>
 					<execution>
 						<goals>
@@ -99,21 +99,6 @@
 						<include>**/*IntegrationTest.java</include>
 					</includes>
 				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<goals>deploy</goals>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>versions-maven-plugin</artifactId>
-				<version>1.3.1</version>
 			</plugin>
 
 		</plugins>
